...
                VStack {
                    
                    Spacer()
                    
                    VStack() {
                        
                        Text("Log In")
                            .padding()
                            .font(.system(size:40))
                        
                        MenuTextField(title: "Email address", input: $viewModel.user.email)
                        
                        MenuTextField(title: "Password", input: $viewModel.user.password, secure: true)
...
                    }
                    
                    // Create Acc Button
                    HStack {
                        Text("New user?")
                        NavigationLink(destination: CreateAccountView(showLogIn: self.$showLogIn), isActive: self.$showLogIn) {
                            Text("Create an Account.")
                        }
                    }
                    .padding(.top, 20)
                    
                    Spacer()
                }
...
