...
            }

            VStack {
                Text("Create a Session").font(.system(size: 40, weight: .heavy)).padding()

                VStack {
                    MenuTextField(title: "Session Name", input: $sessionViewModel.newSession.sessionTitle)

                    MenuTextField(title: "Description", input: $sessionViewModel.newSession.sessionDescription)

                    HStack {
//                        ActivityTypeTile(selected: true)
//                            .padding()
...
                                                       groupId: groupViewModel.selectedGroup?.groupId)
                        sessionItemViewModel.activeSession = sessionViewModel.newSession
                        sessionItemViewModel.loadItems()
                        showSheets = nil
                        showActivity = true
                    } label: {
                        BigButton(title: "Start").padding()
                    }
                }
            }
        }
    }
}
...
